tests/errors/lambda_type_error.ceos
fn _(a: int) -> int { a } ("foo")
